# meataxe64

./: .gitignore  .travis.yml  COPYRIGHT.md  Makefile.am  Makefile.in  PackageInfo.g  README.md  autogen.sh  configure.ac  init.g  makedoc.g  read.g
.github/workflows/: CI.yml
_data/: package.yml
doc/: Chapters.autodoc  _AutoDocMainFile.xml  _Chapter_meataxe64_automatic_generated_documentation.xml  chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap1_mj.html  chap2.html  chap2.txt  chap2_mj.html  chap3.html  chap3.txt  chap3_mj.html  chapInd.html  chapInd.txt  chapInd_mj.html  meataxe64.xml  title.xml
etc/: asmfix.g  bench.g  timers.g  upd.sh
gap/: bench.g  echelize.gd  echelize.gi  matobj.gd  matobj.gi  meataxe64.gd  meataxe64.gi  spin.gi  spin2.gi  vecobj.gi
mtx64v2b/: .dropbox  echelize.gi  readme
mtx64v2b/R2019/: Phase1ToDo.odt  S1Introduction.odt  S4overview.odt  S9speed.odt  asprimes.odt  field.odt  filefmt.odt  functions.odt  hpmi.odt  pcrit.odt  zem1.odt  zprog.odt
mtx64v2b/alb/: alb0  alb1  alb2  alb3  stla  stle  try
mtx64v2b/doc/: .~lock.functions.odt#  bitstring.odt  field.odt  functions.odt  hpmi (copy).odt  hpmi.odt  io.odt  linf.odt  mx64plan.odt  pcrit.odt  progdoc.odt  proggies.odt  tfarm0.odt  tfarm2.odt  todolist.odt
mtx64v2b/ideas/: Barrett.odt  Chop.odt  CompFac.odt  DAdd.odt  GaussSmall.odt  Gray  TF2.odt  aasprimes.odt  afmt.odt  afmt512.odt  alb.odt  albsearch.odt  asprimes.odt  bigprimes.odt  bytecodes.odt  charpoly.odt  cpuid.odt  dech.odt  decproj.odt  diskchopping.odt  embed.odt  exten.odt  fieldreg.odt  floatHPMI.odt  gaelts.odt  gauss.odt  genetic.odt  hilbert.odt  hpmi2.odt  hpmi2512.odt  hpmi4.odt  linfrev.odt  mactype.odt  meataxe.html  memmult.odt  mex.odt  mfmul.odt  mingauss.odt  mmad.odt  mmul.odt  (+39 more)
mtx64v2b/jif/: adin  albs  check_log.sh  comp2  compa  dl  e2  fp  fr  ga  gcreg  lo  lo3  lor  makl  ni3  sb3  shasrc  sp  sp3  st3  te  v3a  v3b  val1  val2  val3  val4  val5  valgr
mtx64v2b/jif2/: e2  e3  f1  f2  f3  f4  f5  f6  fp  hr1  hr2  kf  lo  ni  qr  s2  sb  sp  st  te  tt2
mtx64v2b/lib/: a9a  a9b  co3a  co3b  co3pa  co3pb  f22785a  f22785b  f322a  f322b  hea  heb  hsa  hsb  j1a  j1b  j2a  j2b  j33a  j33b  j3a  j3b  m24a  m24b  mcla  mclb  te62a  te62b
mtx64v2b/obsolete/: alb.c  albi.c  arizona.odt  dfmtf.c  fsmu.c  hpmi2a.c  pcritmex.s  pcritsave.s  zem.c
mtx64v2b/olddoc/: V20.odt  axbitstring.odt  bmutex.odt  bongs.odt  decompose.odt  field.odt  fieldtab.odt  fmmu.odt  gauss.odt  genuine.odt  hills.odt  hpmi.odt  hpmi5.odt  hpmiA4S4.odt  hpmig.odt  linf.odt  mech.odt  memu.odt  mmul.odt  mult.odt  perffield.odt  pubcrawl.odt  rech.odt  reorg.odt  slabg.odt  splitting.odt  t3spin.odt  tfarm.odt  tfarm0.odt  thack.odt  zen.odt  zpesparse.odt
mtx64v2b/predoc/: filefmt.odt  manual.odt  readme.txt
mtx64v2b/reg/: conpol  oval2log  primlog  val2log  val3log  val4log  val5log  valgbs  valgbs1
scripts/: build_gap.sh
src/: bitstring.c  bitstring.h  functions.c  functions.h  meataxe64.c  meataxe64.h  memfuns.c  mf-notes.txt  slab.c  slab.h
tst/: bitstring.tst  echcheck.g  echelize.tst  felt.tst  matrix.tst  matrx.tst  solving.tst  testall.g  testinstall.g  testutils.g
(+576 files in other folders)
